# nexus_wasm

./: .gitignore  Cargo.toml  README.md  build_wasm.sh
assemblyscript_test/: asconfig.json  package-lock.json  package.json
assemblyscript_test/assembly/: index.ts
src/: main.rs
wasm_api/: Cargo.toml
wasm_api/src/: lib.rs
wasm_test/: Cargo.toml
wasm_test/src/: lib.rs
