[package]
name = "nexus_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.9"
owo-colors = "3.5.0"
wasmtime = "14.0.4"
wasm_api = {path = "./wasm_api/"}

[workspace]
members = ["wasm_test","wasm_api"]
